<resources>
    <string name="app_name">GetThePic</string>
    <string name="LOGO">LOGO</string>
    <string name="STARTGAME">Començar!</string>
    <string name="ABOUT">Sobre Nosaltres</string>
    <string name="Description">Aplicació desenvolupada per:</string>
    <string name="NOMS">David Melgares i Joan Jaume Moll</string>
    <string name="MENUPAGE">MENUPAGE</string>
    <string name="totalCardsReversed">Cartes Girades</string>
    <string name="Restart">Tornar a començar</string>
    <string name="FinishGame">Em Rendeixo</string>
    <string name="fondo1" />
    <string name="currentPlayer">Jugador actual:</string>
    <string name="points">Punts:</string>
    <string name="IAPLAYER">IAplayer</string>
    <string name="BorrarDB">BorrarDB</string>
    <string name="VeureDB">VeureDB</string>
    <string name="logout">LogOut</string>
    <string name="email">Email</string>
    <string name="Password">Contrasenya</string>
    <string name="Login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="VerifyEmail">Verifica el teu Email</string>
    <string name="FWPass">RECUPERAR CONTRASENYA</string>
    <string name="Submit">ENVIAR</string>
    <string name="ExplanationFWPass">Introduïu la vostra adreça de correu electrònic i us enviarem un correu electrònic per restablir la vostra contrasenya</string>
    <string name="LastLogin">Ultima conexió:</string>
    <string name="UserInfo">InfoUsuari</string>
    <string name="Menu">Menu</string>
    <string name="LastPoints">Ultims Punts</string>
    <string name="WR">Record mundial</string>
    <string name="TimeTrialMenu">Time Trial</string>
    <string name="btTimeTrialMenu">Time Trial</string>
    <string name="others">Mes opcions</string>
    <string name="NivellsTT">Nivells Resolts:</string>
    <string name="myIntName">myIntName</string>
    <string name="Connect">Conectat</string>
    <string name="Create">Crear</string>
    <string name="ToastSendFW">"Contrasenya enviada al correu"</string>
    <string name="SignIncorrec">"Email o contrasenya incorrectes"</string>
    <string name="EmailSignIncorrec">"He tingut un problema enviant-te l'email, ho sento tio."</string>
    <string name="LoginIncorrec">"Ha fallat l'auntentificació."</string>
    <string name="EmailPassIncorrec">"Inici de sessió no valid. Mira el correu i la contrasenya que siguin correctes."</string>
    <string name="ChooseOption">Escull!</string>
    <string name="Desc">Escull si et vols conectar a un joc existent, o en vols crear un de nou</string>
    <string name="WorldRecord">Record Mundial:</string>
    <string name="WRTT">Record Mundial Time Trial:</string>
    <string name="WRTTuser"> Nom Usuari WR: </string>
    <string name="WRTTuserInfo">Usuari Record TT:</string>
    <string name="Account">COMPTE</string>
    <string name="txtUserInfo">USER INFO</string>
    <string name="userName">Username</string>
    <string name="Commit">Commit</string>
    <string name="matchKey">Key: </string>
    <string name="user">User</string>
    <string name="vs">VS</string>
    <string name="pointsResultMulti">punts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ChangeUserName">Cambiar Nom d\'usuari:</string>


</resources>