<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cat.udl.getthepic.gtidic.udl.getthepic.android.jjd2223.views.ForgotPasswordActivity">

    <Button
        android:id="@+id/btFWSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/Submit"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight2"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft2"
        app:layout_constraintTop_toBottomOf="@+id/etEmailFWPass" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginRight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginLeft2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <EditText
        android:id="@+id/etEmailFWPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight2"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft2"
        app:layout_constraintTop_toBottomOf="@+id/ExplanationFW" />

    <TextView
        android:id="@+id/tvLoginTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/FWPass"
        android:textAllCaps="true"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ExplanationFW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="209dp"
        android:text="@string/ExplanationFWPass"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>