<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cat.udl.getthepic.gtidic.udl.getthepic.android.jjd2223.views.Others">


    <Button
        android:id="@+id/laiajuga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="super IA"
        app:layout_constraintEnd_toEndOf="@+id/borrarDB"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/borrarDB"
        app:layout_constraintTop_toBottomOf="@+id/borrarDB" />

    <Button
        android:id="@+id/veureDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VeureDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <Button
        android:id="@+id/borrarDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/BorrarDB"
        app:layout_constraintEnd_toEndOf="@+id/veureDB"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/veureDB"
        app:layout_constraintTop_toBottomOf="@+id/veureDB" />

    <Button
        android:id="@+id/menureturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Menu"
        app:layout_constraintEnd_toEndOf="@+id/laiajuga"
        app:layout_constraintStart_toStartOf="@+id/laiajuga"
        app:layout_constraintTop_toBottomOf="@+id/laiajuga" />

</androidx.constraintlayout.widget.ConstraintLayout>