<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cat.udl.getthepic.gtidic.udl.getthepic.android.jjd2223.views.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordLogin"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/Login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />

    <Button
        android:id="@+id/btLoginToSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/SignUp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/btFWPass" />

    <Button
        android:id="@+id/btFWPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="@string/FWPass"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="314dp"
        android:layout_height="153dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconoapp" />

    <TextView
        android:id="@+id/tvLoginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Login"
        android:textAllCaps="true"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/ivImageLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>